--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <!DOCTYPE html>
 <head>   
 <!-- HEAD SECTION -->
-
+<title> Diamond's Portfolio</title>
 <!-- IE Edge Meta Tag -->
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
@@ -61,6 +61,8 @@
     <!-- Portfolio Grid Section -->
     <div class="container">
          <div class="row">
+           <div class="col-xs-12">
+           </div>
              </div>
              </div>
 
@@ -68,7 +70,7 @@
     <div class = "about">
     <div class = "container">
         <div class="row">
-            <div class="col-xs-4"><div id="myCarousel" class="carousel slide" data-ride="carousel">
+            <div class= "col-xs-3"><div id="myCarousel" class="carousel slide" data-ride="carousel">
   <!-- Indicators -->
   <ol class="carousel-indicators">
     <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
@@ -106,6 +108,14 @@
 </div>
 </div>
 </div>
+</div>
+<div class= "col-xs-2">  </div>
+<div class= "col-xs-2">
+  <h2>About Me</h2>
+</div>
+<div class= "col-xs-3">   </div>
+<div class= "col-xs-2">
+  <h2>Achievements</h2>
 </div>
     <!-- Contact Section -->
 
